# djangocms-qrcode

./: .gitignore  README.md  pyproject.toml
djangocms_qrcode/: apps.py  cms_plugins.py  models.py
djangocms_qrcode/locale/cs/LC_MESSAGES/: django.mo  django.po
djangocms_qrcode/migrations/: 0001_initial.py  0002_alter_qrcode_alignment_dark_and_more.py
djangocms_qrcode/templates/: djangocms-qrcode.html
